Revert "trying to fix nav button to left on stretched window"
This reverts commit a846f304cfecc7c9cb96854cdb14ff09879c6da3.

--- a/_sass/minima/_layout.scss
+++ b/_sass/minima/_layout.scss
@@ -25,7 +25,6 @@
 }
 
 .site-nav {
-  position: absolute;
   float: right;
   line-height: $base-line-height * $base-font-size * 2.25;
 
